--- a/biotechnology.html
+++ b/biotechnology.html
@@ -73,12 +73,37 @@
     <div class="row g-4 mb-4">
         <div class="col-12">
         <div class="bento-card h-100">
-            <h3>Introduction
-                <hr>
-            </h3>
-            <p>
-            Sour and Aglibut sweet tamarind are difficult to distinguish, especially when they are seedlings. At this early stage, both varieties appear quite similar, making it challenging to tell them apart. The differences between them become more apparent as they mature, with the sour tamarind exhibiting a more tangy flavor and the Aglibut sweet tamarind developing a milder, sweeter taste. However, in their seedling form, their characteristics are not yet fully developed, contributing to the confusion in identifying them.
-            </p>
+
+        <div class="research-card">
+          <div class="research-image">
+
+            <picture>
+              <!-- WebP version for modern browsers -->
+              <source srcset="./assets/img/research_thumbnail/biotech.webp" type="image/webp">
+              
+              <!-- Fallback PNG version -->
+              <source srcset="./assets/img/research_thumbnail/biotech.png" type="image/png">
+              
+              <!-- Actual image element with lazy loading -->
+              <img 
+                src="./assets/img/research_thumbnail/biotech.png" 
+                alt="Modern agriculture" 
+                loading="lazy"
+                width="100%"
+                height="auto"
+                style="display: block; object-fit: cover; border-radius: 10px;"
+              >
+            </picture>
+
+          </div>
+          <div class="research-text">
+            <h3>Using Biotechnology to Make Tamarind Farming Simpler and Smarter <hr> </h3>
+              <p>
+              Sour and Aglibut sweet tamarind are difficult to distinguish, especially when they are seedlings. At this early stage, both varieties appear quite similar, making it challenging to tell them apart. The differences between them become more apparent as they mature, with the sour tamarind exhibiting a more tangy flavor and the Aglibut sweet tamarind developing a milder, sweeter taste. However, in their seedling form, their characteristics are not yet fully developed, contributing to the confusion in identifying them.
+              </p>
+          </div>
+        </div>
+
 
 
             <h3>Initiatives
