--- a/iot.html
+++ b/iot.html
@@ -73,23 +73,43 @@
     <div class="row g-4 mb-4">
         <div class="col-12">
         <div class="bento-card h-100">
-            <h3>Introduction 
-                <hr>
-            </h3>
-            <p>
-                Internet of Things (IoT) is an emerging subject with growing technical, social, and economic importance. Everyday items such as consumer products, vehicles, industrial and utility components, sensors, and more are being integrated with internet connectivity and advanced data analytics, offering the potential to revolutionize how we live, work, and interact.
-            <br>
-            There are several challenges that need to be addressed in both educational and societal contexts. Communication between students and faculty members regarding attendance, whereabouts, and important announcements remains a significant issue. In addition, the increasing number of fire incidents annually highlights a growing safety concern, while outlets and electrical problems further exacerbate the situation. Security is another pressing issue that needs urgent attention in modern society. Identifying specific locations in large areas can also be difficult, making it harder to address various concerns effectively. In agriculture, there is a growing issue of water wastage in irrigation, as over-moisture in the soil leads to fungus formation.
-            <br>
-            Furthermore, electrical problems with IoT-based irrigation systems complicate efforts to manage water efficiently. With water resources becoming scarcer and more expensive, the need for more sustainable water management practices is becoming ever more urgent, as water availability continues to decline. These interconnected problems require comprehensive solutions to improve both safety and resource management.
-            </p>
+
+        <div class="research-card">
+          <div class="research-image">
+
+            <picture>
+              <!-- WebP version for modern browsers -->
+              <source srcset="./assets/img/research_thumbnail/iot.webp" type="image/webp">
+              
+              <!-- Fallback PNG version -->
+              <source srcset="./assets/img/research_thumbnail/iot.png" type="image/png">
+              
+              <!-- Actual image element with lazy loading -->
+              <img 
+                src="./assets/img/research_thumbnail/iot.png" 
+                alt="Modern agriculture" 
+                loading="lazy"
+                width="100%"
+                height="auto"
+                style="display: block; object-fit: cover; border-radius: 10px;"
+              >
+            </picture>
+
+          </div>
+          <div class="research-text">
+            <h3>Water management and irrigation <hr> </h3>
+                <p>
+                    To address water management, an automated water irrigation system application was designed, utilizing a soil moisture sensor and Raspberry Pi to monitor irrigation levels in real-time. Fault detection in the irrigation system is managed through an Arduino-based serial monitor, ensuring quick identification of issues and minimizing system downtime. Additionally, a water resources thematic map was developed to catalog both existing and potential water resources within the PSAU property, facilitating the identification of <br> various water sources and receivers across the campus. Together, these systems aim to enhance operational efficiency, ensure safety, and promote sustainability within the institution.
+                    </p>
+                    <p>It presents a series of interconnected systems aimed at improving communication, safety, and resource management within an academic institution. One system allows faculty members to post announcements, facilitating communication with students through a centralized application. Another system is designed to enhance safety by recording and displaying data from smoke, temperature, and fire sensors on an LCD monitor, while also sending SMS alerts to authorized fire department personnel in case of emergencies. Additionally, a web-based system embedded in a Raspberry Pi was developed to monitor and control electrical switches manually or via a scheduling system, enabling faculty to set operational schedules. For enhanced security, an IoT-based electronic door lock with an intrusion detection system was also created. Another key system generates topographic maps for various areas within the university, including academic, commercial, and science and technology zones, while also mapping infrastructure facilities across the PSAU campus.
+                </p>
+
+          </div>
+        </div>
 
             <h3>Initiatives 
                 <hr>
             </h3>
-            <p>
-                To address water management, an automated water irrigation system application was designed, utilizing a soil moisture sensor and Raspberry Pi to monitor irrigation levels in real-time. Fault detection in the irrigation system is managed through an Arduino-based serial monitor, ensuring quick identification of issues and minimizing system downtime. Additionally, a water resources thematic map was developed to catalog both existing and potential water resources within the PSAU property, facilitating the identification of various water sources and receivers across the campus. Together, these systems aim to enhance operational efficiency, ensure safety, and promote sustainability within the institution. It presents a series of interconnected systems aimed at improving communication, safety, and resource management within an academic institution. One system allows faculty members to post announcements, facilitating communication with students through a centralized application. Another system is designed to enhance safety by recording and displaying data from smoke, temperature, and fire sensors on an LCD monitor, while also sending SMS alerts to authorized fire department personnel in case of emergencies. Additionally, a web-based system embedded in a Raspberry Pi was developed to monitor and control electrical switches manually or via a scheduling system, enabling faculty to set operational schedules. For enhanced security, an IoT-based electronic door lock with an intrusion detection system was also created. Another key system generates topographic maps for various areas within the university, including academic, commercial, and science and technology zones, while also mapping infrastructure facilities across the PSAU campus.
-            </p>
 
             <h3>R4D Thrusts and Priorities 
                 <hr>
