--- a/livelihood.html
+++ b/livelihood.html
@@ -73,15 +73,39 @@
     <div class="row g-4 mb-4">
         <div class="col-12">
         <div class="bento-card h-100">
-            <h3>Introduction
-                <hr>
-            </h3>
-            <p>
-            Livelihood refers to the means or methods by which individuals or communities sustain themselves financially and support their basic needs, such as food, shelter, and clothing. It encompasses the activities, resources, and strategies people use to earn a living, whether through work, agriculture, trade, services, or other economic activities.
-            </p>
-            <p>
-           Climate change is a widespread issue that significantly impacts ecosystems and biodiversity, leading to the disruption of natural habitats and altering species' survival. Alongside this, climate-related disasters, such as floods, droughts, and storms, can devastate communities, destroying people's economic, cultural, and social lives. These events worsen existing vulnerabilities and lead to increased poverty and food insecurity. The effectiveness of initiatives like the National Greening Program (NGP) is critical in addressing these challenges. By focusing on poverty reduction, food security, and environmental stability, NGP aims to mitigate the effects of climate change and promote sustainable development. However, its success in achieving these goals depends on effective implementation and coordination across various sectors.            </p>
+        <div class="research-card">
+          <div class="research-image">
 
+            <picture>
+              <!-- WebP version for modern browsers -->
+              <source srcset="./assets/img/research_thumbnail/LIVELI.webp" type="image/webp">
+              
+              <!-- Fallback PNG version -->
+              <source srcset="./assets/img/research_thumbnail/LIVELI.png" type="image/png">
+              
+              <!-- Actual image element with lazy loading -->
+            <img 
+              src="./assets/img/research_thumbnail/LIVELI.png" 
+              alt="Modern agriculture" 
+              loading="lazy"
+              width="100%"
+              height="auto"
+              style="display: block; object-fit: cover; object-position: top; border-radius: 10px;"
+            >
+
+            </picture>
+
+          </div>
+          <div class="research-text">
+            <h3>Livelihood sustainability <hr> </h3>
+              <p>
+              Livelihood refers to the means or methods by which individuals or communities sustain themselves financially and support their basic needs, such as food, shelter, and clothing. It encompasses the activities, resources, and strategies people use to earn a living, whether through work, agriculture, trade, services, or other economic activities.
+              </p>
+              <p>
+            Climate change is a widespread issue that significantly impacts ecosystems and biodiversity, leading to the disruption of natural habitats and altering species' survival. Alongside this, climate-related disasters, such as floods, droughts, and storms, can devastate communities, destroying people's economic, cultural, and social lives. These events worsen existing vulnerabilities and lead to increased poverty and food insecurity. The effectiveness of initiatives like the National Greening Program (NGP) is critical in addressing these challenges. By focusing on poverty reduction, food security, and environmental stability, NGP aims to mitigate the effects of climate change and promote sustainable development. However, its success in achieving these goals depends on effective implementation and coordination across various sectors.            </p>
+
+          </div>
+        </div>
             <h3>Initiatives
                 <hr>
             </h3>
