--- a/livestock.html
+++ b/livestock.html
@@ -72,14 +72,40 @@
     <!-- Top Row -->
     <div class="row g-4 mb-4">
         <div class="col-12">
-        <div class="bento-card h-100">
-            <h3>Introduction
-                <hr>
-            </h3>
+                  <div class="bento-card h-100">
+    <div class="research-card">
+      <div class="research-image">
+
+        <picture>
+          <!-- WebP version for modern browsers -->
+          <source srcset="./assets/img/research_thumbnail/LiveStocks.webp" type="image/webp">
+          
+          <!-- Fallback PNG version -->
+          <source srcset="./assets/img/research_thumbnail/LiveStocks.png" type="image/png">
+          
+          <!-- Actual image element with lazy loading -->
+          <img 
+            src="./assets/img/research_thumbnail/LiveStocks.png" 
+            alt="Modern agriculture" 
+            loading="lazy"
+            width="100%"
+            height="auto"
+            style="display: block; object-fit: cover; border-radius: 10px;"
+          >
+        </picture>
+
+      </div>
+      <div class="research-text">
+        <h3>Livestock health research & innovation <hr> </h3>
             <p>
-It is important to think both practically and sustainability when it comes to livelihood. To help communities cope with the changing weather patterns and ecosystem degradation, it needs to examine climate-resilient livelihoods, such as drought-resistant crops or sustainable fisheries management. 
-<br>
-Additionally, to address gender sensitive livelihood, such as the strategies and policies that support women and other disadvantaged groups. Lastly, the role of social protection programs in improving security, especially during crises.            </p>
+            It is important to think both practically and sustainability when it comes to livelihood. To help communities cope with the changing weather patterns and ecosystem degradation, it needs to examine climate-resilient livelihoods, such as drought-resistant crops or sustainable fisheries management. 
+            <br>
+            Additionally, to address gender sensitive livelihood, such as the strategies and policies that support women and other disadvantaged groups. Lastly, the role of social protection programs in improving security, especially during crises.            </p>
+
+      </div>
+    </div>
+
+
 
             <h3>Initiatives
                 <hr>
