--- a/root-crops.html
+++ b/root-crops.html
@@ -74,20 +74,40 @@
     <div class="row g-4 mb-4">
         <div class="col-12">
         <div class="bento-card h-100">
-            <h3>Introduction
-                <hr>
-            </h3>
-            <p>
-            Root Crops refers to any plant that is cultivated primarily for its edible, underground root, which stores nutrients for the plant. Root Crops are valuable for their ability to grow in a variety of soil types and climates, and they often provide a reliable food source, especially in areas with challenging growing conditions.            </p>
-            <p>
-            Crop management systems account for a significant portion of farmers production costs, with insect pests and diseases being major contributors to yield reduction. The low productivity of crops such as mungbean and peanut further exacerbates these challenges. Additionally, mice often mate less reliably, impacting their populations. Invasive plant species also tend to proliferate in environments where they were not originally propagated, posing further threats to crop yields and ecosystem balance.            </p>
+        <div class="research-card">
+          <div class="research-image">
+
+            <picture>
+              <!-- WebP version for modern browsers -->
+              <source srcset="./assets/img/research_thumbnail/RootCRops.webp" type="image/webp">
+              
+              <!-- Fallback PNG version -->
+              <source srcset="./assets/img/research_thumbnail/RootCRops.png" type="image/png">
+              
+              <!-- Actual image element with lazy loading -->
+              <img 
+                src="./assets/img/research_thumbnail/RootCRops.png" 
+                alt="Modern agriculture" 
+                loading="lazy"
+                width="100%"
+                height="auto"
+                style="display: block; object-fit: cover; border-radius: 10px;"
+              >
+            </picture>
+
+          </div>
+          <div class="research-text">
+            <h3>How Simple Plants Can Protect Crops and People <hr> </h3>
+                <p>
+              The effect of different extracts on major mungbean diseases has been a subject of study, with various plant-based solutions showing potential in controlling these diseases. Additionally, the impact of different rates of plant growth promoters (PGP) on disease reactions, insect pest infestations, and the yield potential of mungbean varieties has been observed, revealing that optimal PGP application can improve both plant health and productivity. Moringa water extract, known for its medicinal properties, has also been explored for its potential benefits in crop management. Furthermore, the medicinal properties of invasive plants are being increasingly recognized, with some showing promise in treating various ailments, even as they continue to pose threats to agricultural systems.
+                </p>
+          </div>
+        </div>
 
             <h3>Initiatives
                 <hr>
             </h3>
-            <p>
-           The effect of different extracts on major mungbean diseases has been a subject of study, with various plant-based solutions showing potential in controlling these diseases. Additionally, the impact of different rates of plant growth promoters (PGP) on disease reactions, insect pest infestations, and the yield potential of mungbean varieties has been observed, revealing that optimal PGP application can improve both plant health and productivity. Moringa water extract, known for its medicinal properties, has also been explored for its potential benefits in crop management. Furthermore, the medicinal properties of invasive plants are being increasingly recognized, with some showing promise in treating various ailments, even as they continue to pose threats to agricultural systems.
-            </p>
+
 
             <h3>R4D Thrusts and Priorities
                 <hr>
