--- a/tech.html
+++ b/tech.html
@@ -312,52 +312,56 @@ a.text-decoration-none {
       </div>
     </section>
 
-  <!-- Footer -->
-<footer class="footer-section ">
-  <div class="container">
-    <div class="row">
+<!-- Footer -->
+<footer class="custom-footer-section">
+  <div class="container-fluid py-5">
+    <div class="row gy-4">
       <!-- Column 1: Logos -->
-      <div class="col-md-3 mb-4">
-        <div class="footer-logos d-flex flex-wrap gap-2">
-          <img src="assets/img/iptbm.png" alt="Logo 1" class="footer-logo">
-          <img src="assets/img/kmlogo.png" alt="Logo 2" class="footer-logo">
-          <img src="assets/img/sibultbi-logo.png" alt="Logo 3" class="footer-logo">
-          <img src="assets/img/officeofinnovation.png" alt="Logo 4" class="footer-logo">
+      <div class="col-12 col-md-3 text-center text-md-start">
+        <div class="custom-footer-logos d-flex flex-wrap justify-content-center justify-content-md-start gap-2">
+          <img src="assets/img/iptbm.png" alt="Logo 1" class="custom-footer-logo">
+          <img src="assets/img/kmlogo.png" alt="Logo 2" class="custom-footer-logo">
+          <img src="assets/img/sibultbi-logo.png" alt="Logo 3" class="custom-footer-logo">
+          <img src="assets/img/officeofinnovation.png" alt="Logo 4" class="custom-footer-logo">
         </div>
       </div>
 
-      <!-- Column 2 -->
-      <div class="col-md-3 mb-4">
-        <h5>Quick Links</h5>
-        <ul class="list-unstyled">
-          <li><a href="#Homepage" class="text-decoration-none">Home</a></li>
-          <li><a href="#about" class="text-decoration-none">About</a></li>
-          <li><a href="#" class="text-decoration-none">Contact</a></li>
+      <!-- Column 2: Quick Links -->
+      <div class="col-6 col-md-3">
+        <h5 class="custom-footer-title">Quick Links</h5>
+        <ul class="list-unstyled custom-footer-links">
+          <li><a href="#Homepage">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
 
-      <!-- Column 3 -->
-      <div class="col-md-3 mb-4">
-        <h5>Resources</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-decoration-none">Media</a></li>
-          <li><a href="#" class="text-decoration-none">Publications</a></li>
-          <li><a href="#" class="text-decoration-none">Newsletters</a></li>
-          <li><a href="#" class="text-decoration-none">Modules</a></li>
+      <!-- Column 3: Resources -->
+      <div class="col-6 col-md-3">
+        <h5 class="custom-footer-title">Resources</h5>
+        <ul class="list-unstyled custom-footer-links">
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Publications</a></li>
+          <li><a href="#">Newsletters</a></li>
+          <li><a href="#">Modules</a></li>
         </ul>
       </div>
 
-      <!-- Column 4 -->
-      <div class="col-md-3 mb-4">
-        <h5>Contact Us</h5>
-        <p>Pampanga State Agricultural University<br>PAC, San Agustin, Magalang, Pampanga, Philippines</p>
-        <p>Email: kmc@psau.edu.ph</p>
-        <p>Phone: (045) 123-4567</p>
+      <!-- Column 4: Contact Info -->
+      <div class="col-12 col-md-3">
+        <h5 class="custom-footer-title">Contact Us</h5>
+        <p class="custom-footer-text">
+          Pampanga State Agricultural University<br>
+          PAC, San Agustin, Magalang, Pampanga, Philippines
+        </p>
+        <p class="custom-footer-text">Email: <a href="mailto:kmc@psau.edu.ph" class="text-decoration-none text-dark">kmc@psau.edu.ph</a></p>
+        <p class="custom-footer-text">Phone: (045) 123-4567</p>
       </div>
-
     </div>
-    <div class="row text-center mt-4 pt-3   footer-bottom">
-    <p class="mb-0">&copy; Philippine Copyright 2025 by Pampanga State Agricultural University</p>
+
+    <!-- Bottom -->
+    <div class="text-center mt-4 pt-3 custom-footer-bottom">
+      <p class="mb-0">&copy; 2025 Pampanga State Agricultural University. All rights reserved.</p>
     </div>
   </div>
 </footer>
